# cv_project

./: .gitignore  CMakeLists.txt  OpenCV_report.docx  OpenCV_report.odt  README.md  adv_search.cpp  base_creation.cpp  base_creation_testing.cpp  base_search.cpp  bow_search.cpp  changelog  clustering.cpp  contributors.txt  detectors.cpp  resize.cpp  search.cpp  test.cpp  test_save.cpp
bot/: bot.py  config.py  grabber.py  search_bot.py
data/: centers.yml  clusterCenters.yml  idf.yml  indexInverted.yml  indexStraight.yml  inverted_index.yml  straight_index.yml  tf.yml  words.yml
detectors/: detectors.cpp
first_steps/: first_steps.cpp
gradients/: grads.cpp
helpful_vision/: CMakeLists.txt  add_to_lib.cpp  binary_save.cpp  detectors.cpp  main.cpp  resize.cpp
report/: OpenCV_report.odt  Poisk_po_kartinkam_14062016_VG2.pptx
